@@ -1,3 +1,4 @@
 [0.0.3]
 - BREAKING: Fixed typo "soundSontinuousFadeIn" in ParrotSettings. The field is now called "soundContinuousFadeIn".
+- Added SoundInstance.getSound(), which returns the underlying libGDX Sound instance being used.
 - Added "volumeVariation" to ParrotSoundType, which automatically applies a random volume variation when played.
